--- a/.gitignore
+++ b/.gitignore
@@ -10,15 +10,23 @@
 /[Ll]ogs/
 /[Mm]emoryCaptures/
 
+# For macOS
 .DS_Store
 
 # meta files
+*.meta
 /**/*.meta
+
+# For Cohort
+/**/Best HTTP (Pro)
+/**/FlashLight
 
 # Never ignore Asset meta data
 !/[Aa]ssets/**/*.meta
 
-
+#... unless it's an external lib
+Assets/Best HTTP (Pro).meta
+Assets/FlashLight.meta
 
 # Uncomment this line if you wish to ignore the asset store tools plugin
 # /[Aa]ssets/AssetStoreTools*
