ignored video folder for TPM residency

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,9 @@
 # For Cohort
 /builds
 
+/Assets/CohortUnityClient/Resources/tpm-video/
+/Assets/CohortUnityClient/Resources/tpm-video.meta
+
 # Never ignore Asset meta data
 !/[Aa]ssets/**/*.meta
 
